--- a/settings/formsstyles.css
+++ b/settings/formsstyles.css
@@ -1,26 +1,32 @@
 /*https://codepen.io/ganeshraju/pen/PXgYOz*/
-@import url("https://fonts.googleapis.com/css?family=PT+Sans");
-
-
+body {
+    font-family: 'Cormorant Garamond', sans-serif;
+    color: #464146;
+    font-size: 24px;
+    line-height: 30px;
+}
 
 a {
     color: #333;
 }
+
 a:hover {
     color: #72617c;
     text-decoration: none;
 }
+
 .card {
     border: 0.4rem solid rgba(239, 236, 225, 0.98);
     top: 10%;
 
 }
+
 .form-control {
     background-color: rgba(239, 236, 225, 0.8);
     padding: 20px;
     padding: 25px 15px;
     margin-bottom: 1.3rem;
-    width: -moz-available;
+    width: -moz-max-content;
 }
 
 .form-control:focus {
@@ -32,13 +38,40 @@ a:hover {
 }
 
 .btn {
-    padding: 0.6rem 1.2rem;
-    background: rgb(49, 11, 64);
-    color:rgba(239, 236, 225, 0.8) ;
-    border: 2px solid rgba(239, 236, 225, 0.8);
+    height: 45px;
+    border: 1px solid #301066;
+    border-radius: 25px;
+    background-color: transparent;
+    -webkit-transition: background-color 200ms ease, color 200ms ease;
+    transition: background-color 200ms ease, color 200ms ease;
+    font-family: Roboto, sans-serif;
+    line-height: 15px;
+    text-align: center;
+
 }
-.btn-primary:hover {
-    background-color: rgba(114, 97, 124, 0.9);
-    color: rgb(48, 16, 102);
-     transition: 0.3s;
+
+.btn:hover {
+
+    background-color: rgba(180, 172, 179, 0.9);
+}
+
+.btn:active {
+
+    background-color: rgb(114, 97, 124);
+}
+
+
+.center-box {
+    display: block;
+    width: 20%;
+    text-align: -moz-center;
+    max-width: 820px;
+    margin-right: auto;
+    margin-left: auto;
+    font-family: Roboto, sans-serif;
+    color: #464146;
+    font-size: 13px;
+    font-weight: 700;
+    text-align: center;
+    text-transform: uppercase;
 }
