--- a/settings/styles.css
+++ b/settings/styles.css
@@ -149,6 +149,20 @@ body {
 
 }
 
+.responsive-iframe {
+    position: fixed;
+    padding-bottom: 100%; /* 1:1 Aspect Ratio */
+    margin-top: 110px;
+    z-index: 1;
+    width: 100%;
+    height: 99%;
+    resize: both;
+    overflow-x: auto;
+    overflow-y: auto;
+    border: none;
+
+}
+
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 700px) {
     .row {
