--- a/settings/formsstyles.css
+++ b/settings/formsstyles.css
@@ -1,10 +1,3 @@
-/*https://codepen.io/ganeshraju/pen/PXgYOz*/
-body {
-    font-family: 'Cormorant Garamond', sans-serif;
-    color: #464146;
-    font-size: 24px;
-    line-height: 30px;
-}
 
 a {
     color: #333;
@@ -15,23 +8,26 @@ a:hover {
     text-decoration: none;
 }
 
-.card {
-    border: 0.4rem solid rgba(239, 236, 225, 0.98);
-    top: 10%;
-
-}
 
 .form-control {
     background-color: rgba(239, 236, 225, 0.8);
-    padding: 20px;
     padding: 25px 15px;
     margin-bottom: 1.3rem;
     width: -moz-max-content;
+    align-self: center;
 }
 
 .form-control:focus {
     color: #000000;
-    background-color: rgba(239, 236, 225, 0.8);
+    background-color: rgba(239, 236, 225, 0.98);
+    border: 3px solid #464146;
+    outline: 0;
+    box-shadow: none;
+}
+
+.form-control:active {
+    color: #000000;
+    background-color: rgba(239, 236, 225, 0.98);
     border: 3px solid #464146;
     outline: 0;
     box-shadow: none;
@@ -39,6 +35,7 @@ a:hover {
 
 .btn {
     height: 45px;
+    font-size: 13px;
     border: 1px solid #301066;
     border-radius: 25px;
     background-color: transparent;
@@ -65,12 +62,10 @@ a:hover {
     display: block;
     width: 20%;
     text-align: -moz-center;
-    max-width: 820px;
     margin-right: auto;
     margin-left: auto;
     font-family: Roboto, sans-serif;
     color: #464146;
-    font-size: 13px;
     font-weight: 700;
     text-align: center;
     text-transform: uppercase;
