--- a/settings/styles.css
+++ b/settings/styles.css
@@ -39,6 +39,7 @@ body {
 /* Increase the font size of the heading */
 .header h1 {
     font-size: 40px;
+    padding: 2% 2% 2% 2%;
 }
 
 .header h2 {
@@ -48,27 +49,20 @@ body {
 
 /* Column container */
 .row {
-    display: -ms-flexbox; /* IE10 */
     display: flex;
-    -ms-flex-wrap: wrap; /* IE10 */
-    flex-wrap: wrap;
 }
 
-/* Create two unequal columns that sits next to each other */
-/* Sidebar/left column */
-.side {
-    -ms-flex: 50%; /* IE10 */
-    flex: 50%;
-    background-color: rgba(241, 240, 236, 0.98);
-    padding: 20px;
+.row:after {
+    clear: both;
 }
 
-/* Main column */
-.main {
-    -ms-flex: 50%; /* IE10 */
-    flex: 50%;
-    background-color: rgba(241, 240, 236, 0.98);
-    padding: 20px;
+/* Create two equal columns that floats next to each other */
+.column {
+    -ms-flex: 50%;
+    width: 50%;
+    padding: 2%;
+
+
 }
 
 
@@ -131,31 +125,19 @@ body {
 }
 
 .content-wrapper {
-    position: relative;
+    position: center;
     width: 100%;
-    max-width: 1265px;
-    padding-right: 25px;
-    padding-left: 25px;
+    padding: 2%;
 }
 
-.w-container::before, .w-container::after {
-
-    content: " ";
-    display: table;
-    grid-column-start: 1;
-    grid-row-start: 1;
-    grid-column-end: 2;
-    grid-row-end: 2;
-
-}
 
 .responsive-iframe {
-    position: fixed;
+    position: absolute;
     padding-bottom: 100%; /* 1:1 Aspect Ratio */
-    margin-top: 110px;
+    margin-top: 20px;
     z-index: 1;
     width: 100%;
-    height: 99%;
+    height: 100%;
     resize: both;
     overflow-x: auto;
     overflow-y: auto;
@@ -167,6 +149,10 @@ body {
 @media screen and (max-width: 700px) {
     .row {
         flex-direction: column;
+    }
+
+    .column {
+        width: 100%;
     }
 }
 
