--- a/settings/styles.css
+++ b/settings/styles.css
@@ -5,7 +5,7 @@
 
 body {
 
-    background-color: rgba(239, 236, 225, 0.8);
+    background-color: #EEF2F4;
     overflow: auto;
     display: flex;
     flex-direction: column;
@@ -27,23 +27,24 @@ body {
 
 /* Header/logo Title */
 .header {
-    padding: 20px;
+    padding: 1%;
     text-align: center;
-    background: rgb(49, 11, 64);
-    color: rgba(239, 236, 225, 0.8);
+    background: #1c3848;
+    color: #F7F7F7;
     user-select: none;
-    position: -ms-device-fixed;;
-
+    font-family: "Proxima Nova";
+    letter-spacing: 2px;
+    position: center;
 }
 
 /* Increase the font size of the heading */
 .header h1 {
-    font-size: 40px;
-    padding: 2% 2% 2% 2%;
+    font-size: 48pt;
+    padding: 1%;
 }
 
 .header h2 {
-    font-size: 24px;
+    font-size: 20px;
 }
 
 
@@ -70,20 +71,20 @@ body {
 .footer {
     padding: 20px;
     text-align: center;
-    background: #310b40;
+    background: #1c3848;
 }
 
 /* Sticky navbar - toggles between relative and fixed, depending on the scroll position. It is positioned relative until a given offset position is met in the viewport - then it "sticks" in place (like position:fixed). The sticky value is not supported in IE or Edge 15 and earlier versions. However, for these versions the navbar will inherit default position */
 .navbar {
-    height: 50px;
+    height: auto;
     -webkit-transition: background-color 200ms ease;
     transition: background-color 200ms ease;
     font-family: "Cormorant Garamond", sans-serif;
     overflow: hidden;
-    background-color: #310b40;
+    background-color: #354E57;
     position: sticky;
     position: -webkit-sticky;
-    top: 0;
+
 }
 
 /* Style the navigation bar links */
@@ -91,13 +92,15 @@ body {
 .navbar a {
     float: left;
     display: block;
-    color: rgba(239, 236, 225, 0.8);
+    color: #F7F7F7;
     text-align: center;
-    padding: 14px 20px;
+    padding-left: 1%;
+    padding-right: 1%;
     text-decoration: none;
     -webkit-transition: background-color 200ms ease;
     transition: background-color 200ms ease;
     font-family: "Cormorant Garamond", sans-serif;
+    font-size: 20px;
 }
 
 
@@ -108,14 +111,13 @@ body {
 
 /* Change color on hover */
 .navbar a:hover {
-    background-color: rgba(180, 172, 179, 0.9);
-    color: rgb(48, 16, 102);
+    background-color: #F7F7F7;
+    color: rgb(57, 65, 84);
 }
 
-/* Active/current link */
-.navbar a.active {
-    background-color: rgba(180, 172, 179, 0.9);
-    color: #301066;
+.navbar a:active {
+    background-color: #F7F5E6;
+    color: rgb(57, 65, 84);
 }
 
 .content-section {
@@ -130,20 +132,6 @@ body {
     padding: 2%;
 }
 
-
-.responsive-iframe {
-    position: absolute;
-    padding-bottom: 100%; /* 1:1 Aspect Ratio */
-    margin-top: 20px;
-    z-index: 1;
-    width: 100%;
-    height: 100%;
-    resize: both;
-    overflow-x: auto;
-    overflow-y: auto;
-    border: none;
-
-}
 
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 700px) {
