--- a/settings/styles.css
+++ b/settings/styles.css
@@ -24,6 +24,10 @@ body {
     box-sizing: border-box;
 }
 
+.page-container {
+    position: relative;
+    min-height: 100vh;
+}
 
 /* Header/logo Title */
 .header {
@@ -32,9 +36,10 @@ body {
     background: #1c3848;
     color: #F7F7F7;
     user-select: none;
-    font-family: "Proxima Nova";
+    font-family: "Proxima Nova", sans-serif;
     letter-spacing: 2px;
-    position: center;
+
+
 }
 
 /* Increase the font size of the heading */
@@ -51,9 +56,14 @@ body {
 /* Column container */
 .row {
     display: flex;
+    margin: 2%;
+
+
 }
 
 .row:after {
+    content: "";
+    display: table;
     clear: both;
 }
 
@@ -66,33 +76,67 @@ body {
 
 }
 
+.btn {
+    height: 45px;
+    font-size: 13px;
+    border: 1px solid #1c3848;
+    border-radius: 25px;
+    background-color: transparent;
+    -webkit-transition: background-color 200ms ease, color 200ms ease;
+    transition: background-color 200ms ease, color 200ms ease;
+    font-family: Roboto, sans-serif;
+    line-height: 15px;
+    text-align: center;
+    letter-spacing: 2px;
+    padding: 12px 20px;
+    cursor: pointer;
+
+
+}
+
+.btn:hover {
+
+    background-color: rgb(57, 65, 84);
+    color: #F7F7F7;
+}
+
+.btn:active {
+
+    background-color: #9AADC4FF;
+}
+
 
 /* Footer */
 .footer {
-    padding: 20px;
-    text-align: center;
+    position: absolute;
+    bottom: 0;
     background: #1c3848;
+    width: 100%;
+    height: 2.5rem;
 }
+
 
 /* Sticky navbar - toggles between relative and fixed, depending on the scroll position. It is positioned relative until a given offset position is met in the viewport - then it "sticks" in place (like position:fixed). The sticky value is not supported in IE or Edge 15 and earlier versions. However, for these versions the navbar will inherit default position */
 .navbar {
-    height: auto;
+
     -webkit-transition: background-color 200ms ease;
     transition: background-color 200ms ease;
     font-family: "Cormorant Garamond", sans-serif;
     overflow: hidden;
-    background-color: #354E57;
+    background-color: #96b2a7;
     position: sticky;
     position: -webkit-sticky;
 
+
 }
+
 
 /* Style the navigation bar links */
 
 .navbar a {
     float: left;
     display: block;
-    color: #F7F7F7;
+    color: rgb(57, 65, 84);
     text-align: center;
     padding-left: 1%;
     padding-right: 1%;
@@ -101,6 +145,8 @@ body {
     transition: background-color 200ms ease;
     font-family: "Cormorant Garamond", sans-serif;
     font-size: 20px;
+
+
 }
 
 
@@ -111,25 +157,29 @@ body {
 
 /* Change color on hover */
 .navbar a:hover {
-    background-color: #F7F7F7;
+    background-color: rgba(221, 230, 227, 0.74);
     color: rgb(57, 65, 84);
 }
 
-.navbar a:active {
-    background-color: #F7F5E6;
-    color: rgb(57, 65, 84);
+.navbar a.active {
+    background-color: #F7F7F7;
+    color: #1c3848;
+    font-weight: bold;
+    display: block;
+
 }
 
 .content-section {
     overflow: hidden;
-    padding-top: 75px;
-    padding-bottom: 75px;
+    padding-top: 2%;
+
+    padding-bottom: 2.5rem;
 }
 
 .content-wrapper {
     position: center;
-    width: 100%;
-    padding: 2%;
+
+    padding-bottom: 2.5rem;
 }
 
 
@@ -142,6 +192,27 @@ body {
     .column {
         width: 100%;
     }
+
+    .topnav.responsive {
+        position: relative;
+    }
+
+    .topnav.responsive .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+
+    .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+
+    .col-25, .col-75, input[type=submit] {
+        width: 100%;
+        margin-top: 0;
+    }
 }
 
 /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
@@ -151,5 +222,55 @@ body {
         width: 100%;
     }
 
+    .topnav a:not(:first-child) {
+        display: none;
+    }
 
+    .topnav a.icon {
+        float: right;
+        display: block;
+    }
+
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+    text-align: justify;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+th, td {
+    border-bottom: 1px solid #96b2a7;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: transparent;
+    text-align: justify-all;
+}
+
+th {
+    background-color: #546b84;
+    color: rgba(239, 236, 225, 0.8);
+}
+
+div.card {
+
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    text-align: center;
+}
+
+
+div.transbox {
+    margin: 30px;
+    background-color: #ffffff;
+    border: 1px solid black;
+    opacity: 0.6;
+}
+
+div.transbox p {
+    margin: 5%;
+    font-weight: bold;
+    color: #000000;
 }
